[package]
name = "brine"
version = "0.1.0"
authors = ["Akhil Velagapudi <akhilvelagapudi@gmail.com>"]
edition = "2018"
repository = "https://github.com/akhilles/brine.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
  "libsodium/**",
  "!libsodium/LICENSE",
  "!libsodium/AUTHORS",
  "!libsodium/src/**",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
